crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__redefined-while-unused_F811_30.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F811 Redefinition of unused `bar` from line 10
  --> F811_30.py:12:9
   |
 8 |         """Foo."""
 9 |
10 |     bar = foo
   |     --- previous definition of `bar` here
11 |
12 |     def bar(self) -> None:
   |         ^^^ `bar` redefined here
13 |         """Bar."""
   |
help: Remove definition: `bar`

F811 Redefinition of unused `baz` from line 18
  --> F811_30.py:21:5
   |
16 | class B:
17 |     """B."""
18 |     def baz(self) -> None:
   |         --- previous definition of `baz` here
19 |         """Baz."""
20 |
21 |     baz = 1
   |     ^^^ `baz` redefined here
   |
help: Remove definition: `baz`

F811 Redefinition of unused `foo` from line 26
  --> F811_30.py:29:12
   |
24 | class C:
25 |     """C."""
26 |     def foo(self) -> None:
   |         --- previous definition of `foo` here
27 |         """Foo."""
28 |
29 |     bar = (foo := 1)
   |            ^^^ `foo` redefined here
   |
help: Remove definition: `foo`
