crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__redefined-while-unused_F811_31.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F811 Redefinition of unused `baz` from line 17
  --> F811_31.py:19:29
   |
16 | try:
17 |     baz = None
   |     --- previous definition of `baz` here
18 |
19 |     from some_module import baz
   |                             ^^^ `baz` redefined here
20 | except ImportError:
21 |     pass
   |
help: Remove definition: `baz`
