crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__redefined-while-unused_F811_32.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F811 [*] Redefinition of unused `List` from line 4
 --> F811_32.py:5:5
  |
3 | from typing import (
4 |     List,
  |     ---- previous definition of `List` here
5 |     List,
  |     ^^^^ `List` redefined here
6 | )
  |
help: Remove definition: `List`
  |
4 |     List,
  -     List,
5 | )
  |
