crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__redefined-while-unused_F811_35.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F811 Redefinition of unused `bar` from line 7
 --> F811_35.py:9:9
  |
6 | class Foo:
7 |     def bar(self): ...
  |         --- previous definition of `bar` here
8 |
9 |     def bar(self): ...
  |         ^^^ `bar` redefined here
  |
help: Remove definition: `bar`

F811 Redefinition of unused `bar` from line 3
  --> F811_35.py:12:5
   |
12 | def bar(): ...
   |     ^^^ `bar` redefined here
   |
  ::: F811_35.py:3:17
   |
 1 | """Regression test for: https://github.com/astral-sh/ruff/issues/24915"""
 2 |
 3 | from foo import bar
   |                 --- previous definition of `bar` here
   |
help: Remove definition: `bar`
