crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__redefined-while-unused_F811_4.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F811 Redefinition of unused `fu` from line 1
 --> F811_4.py:1:12
  |
1 | import fu; fu, bar = 3
  |        --  ^^ `fu` redefined here
  |        |
  |        previous definition of `fu` here
  |
help: Remove definition: `fu`
