crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__redefined-while-unused_F811_5.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F811 Redefinition of unused `fu` from line 1
 --> F811_5.py:1:13
  |
1 | import fu; [fu, bar] = 3
  |        --   ^^ `fu` redefined here
  |        |
  |        previous definition of `fu` here
  |
help: Remove definition: `fu`
