crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__redefined-while-unused_F811_6.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F811 [*] Redefinition of unused `os` from line 5
 --> F811_6.py:6:12
  |
3 | i = 2
4 | if i == 1:
5 |     import os
  |            -- previous definition of `os` here
6 |     import os
  |            ^^ `os` redefined here
7 | os.path
  |
help: Remove definition: `os`
  |
5 |     import os
  -     import os
6 | os.path
  |
