crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__relative_typing_module.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F821 Undefined name `foo`
  --> bar.py:26:17
   |
25 |     # F821
26 |     x: Literal["foo"]
   |                 ^^^
