crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__return-outside-function_F706.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F706 `return` statement outside of a function/method
 --> F706.py:6:5
  |
5 | class Foo:
6 |     return 2
  |     ^^^^^^^^

F706 `return` statement outside of a function/method
 --> F706.py:9:1
  |
9 | return 3
  | ^^^^^^^^
